Self avoiding random walk related papers

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: fcbfb42f95cf0f194e9e2d46e2f326defc41d8eb
+% Commit: 8b407006de95b6edb214dd5375e11ca8588b328a
 % Date: 2023-03-31
 % ---------------------------
 
@@ -5145,6 +5145,22 @@
   mrclass	= {81V80 (60B20 78A46 78A48)},
   mrnumber	= {2932656},
   mrreviewer	= {Le Man Kuang}
+}
+
+@InCollection{	  beffara:12:schramm-loewner,
+  author	= {Beffara, Vincent},
+  title		= {Schramm-{L}oewner evolution and other conformally
+		  invariant objects},
+  booktitle	= {Probability and statistical physics in two and more
+		  dimensions},
+  series	= {Clay Math. Proc.},
+  volume	= {15},
+  pages		= {1--48},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {2012},
+  mrclass	= {60J67 (60-02 60K35)},
+  mrnumber	= {3025389},
+  mrreviewer	= {Amanda G. Turner}
 }
 
 @Article{	  beijeren.kutner.ea:85:excess,
@@ -14262,6 +14278,17 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -14277,17 +14304,6 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -17525,6 +17541,23 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -17540,23 +17573,6 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -19674,6 +19690,21 @@
   url		= {https://doi.org/10.1016/0022-1236(67)90017-1}
 }
 
+@InCollection{	  duminil-copin.smirnov:12:conformal,
+  author	= {Duminil-Copin, Hugo and Smirnov, Stanislav},
+  title		= {Conformal invariance of lattice models},
+  booktitle	= {Probability and statistical physics in two and more
+		  dimensions},
+  series	= {Clay Math. Proc.},
+  volume	= {15},
+  pages		= {213--276},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {2012},
+  mrclass	= {60K35 (30C35 30C85 60J67 82B20)},
+  mrnumber	= {3025392},
+  mrreviewer	= {Dmitry Beliaev}
+}
+
 @Article{	  duncan.hu.ea:00:stochastic,
   author	= {Duncan, Tyrone E. and Hu, Yaozhong and Pasik-Duncan,
 		  Bozenna},
@@ -19747,6 +19778,21 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -19759,21 +19805,6 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -21027,6 +21058,26 @@
   mrreviewer	= {G. A. Nariboli},
   doi		= {10.1007/BF00251803},
   url		= {https://doi.org/10.1007/BF00251803}
+}
+
+@Proceedings{	  ellwood.newman.ea:12:probability,
+  title		= {Probability and statistical physics in two and more
+		  dimensions},
+  series	= {Clay Mathematics Proceedings},
+  volume	= {15},
+  booktitle	= {Proceedings of the {C}lay {M}athematics {I}nstitute
+		  {S}ummer {S}chool and {XIV} {B}razilian {S}chool of
+		  {P}robability held in {B}\'{u}zios, {J}uly 11--{A}ugust 7,
+		  2010},
+  author	= {Ellwood, David and Newman, Charles and Sidoravicius,
+		  Vladas and Werner, Wendelin},
+  publisher	= {American Mathematical Society, Providence, RI; Clay
+		  Mathematics Institute, Cambridge, MA},
+  year		= {2012},
+  pages		= {x+467},
+  isbn		= {978-0-8218-6863-8},
+  mrclass	= {60-06 (60J67 60K35 82-06)},
+  mrnumber	= {3059543}
 }
 
 @Article{	  emile-borel:09:probabilites,
@@ -24219,6 +24270,21 @@
   mrreviewer	= {Francis Comets},
   doi		= {10.1360/02ys0114},
   url		= {https://doi.org/10.1360/02ys0114}
+}
+
+@InCollection{	  garban.steif:12:noise,
+  author	= {Garban, Christophe and Steif, Jeffrey E.},
+  title		= {Noise sensitivity and percolation},
+  booktitle	= {Probability and statistical physics in two and more
+		  dimensions},
+  series	= {Clay Math. Proc.},
+  volume	= {15},
+  pages		= {49--154},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {2012},
+  mrclass	= {60K35 (60J67 82B05)},
+  mrnumber	= {3025390},
+  mrreviewer	= {Dmitry Beliaev}
 }
 
 @Article{	  garino.nourdin.ea:21:limit,
@@ -27885,6 +27951,18 @@
   author	= {Hairer, Martin},
   title		= {Singular stochastic {PDE}s},
   booktitle	= {Proceedings of the {I}nternational {C}ongress of
+		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
+  pages		= {49--73},
+  publisher	= {Kyung Moon Sa, Seoul},
+  year		= {2014},
+  mrclass	= {60H15 (81S20 82C28)},
+  mrnumber	= {3727602}
+}
+
+@InProceedings{	  hairer:14:singular*1,
+  author	= {Hairer, Martin},
+  title		= {Singular stochastic {PDE}s},
+  booktitle	= {Proceedings of the {I}nternational {C}ongress of
 		  {M}athematicians---{S}eoul 2014. {V}ol. 1},
   pages		= {685--709},
   publisher	= {Kyung Moon Sa, Seoul},
@@ -27892,18 +27970,6 @@
   mrclass	= {60H15 (81S20 82C28)},
   mrnumber	= {3728488},
   mrreviewer	= {Peter Karl Friz}
-}
-
-@InProceedings{	  hairer:14:singular*1,
-  author	= {Hairer, Martin},
-  title		= {Singular stochastic {PDE}s},
-  booktitle	= {Proceedings of the {I}nternational {C}ongress of
-		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
-  pages		= {49--73},
-  publisher	= {Kyung Moon Sa, Seoul},
-  year		= {2014},
-  mrclass	= {60H15 (81S20 82C28)},
-  mrnumber	= {3727602}
 }
 
 @InCollection{	  hairer:14:solving,
@@ -31775,25 +31841,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by spatially correlated noise},
-  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
-  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
-		  et Statistiques},
-  volume	= {53},
-  year		= {2017},
-  number	= {3},
-  pages		= {1305--1340},
-  issn		= {0246-0203},
-  mrclass	= {60G15 (60F10 60H07 60H15 65M75)},
-  mrnumber	= {3689969},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1214/16-AIHP756},
-  url		= {https://doi.org/10.1214/16-AIHP756}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by space and time correlated noise},
   journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
   fjournal	= {Stochastic Partial Differential Equations. Analysis and
@@ -31808,6 +31855,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1007/s40072-017-0099-0},
   url		= {https://doi.org/10.1007/s40072-017-0099-0}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by spatially correlated noise},
+  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {53},
+  year		= {2017},
+  number	= {3},
+  pages		= {1305--1340},
+  issn		= {0246-0203},
+  mrclass	= {60G15 (60F10 60H07 60H15 65M75)},
+  mrnumber	= {3689969},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1214/16-AIHP756},
+  url		= {https://doi.org/10.1214/16-AIHP756}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -36474,6 +36540,21 @@
   url		= {https://doi.org/10.2307/1969559}
 }
 
+@InCollection{	  lawler:12:fractal,
+  author	= {Lawler, Gregory F.},
+  title		= {Fractal and multifractal properties of {S}chramm-{L}oewner
+		  evolution},
+  booktitle	= {Probability and statistical physics in two and more
+		  dimensions},
+  series	= {Clay Math. Proc.},
+  volume	= {15},
+  pages		= {277--318},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {2012},
+  mrclass	= {60J67 (28A80)},
+  mrnumber	= {3025393}
+}
+
 @Article{	  le-bris.lions:08:existence,
   author	= {Le Bris, C. and Lions, P.-L.},
   title		= {Existence and uniqueness of solutions to {F}okker-{P}lanck
@@ -36490,6 +36571,21 @@
   mrreviewer	= {C\'{e}dric Villani},
   doi		= {10.1080/03605300801970952},
   url		= {https://doi.org/10.1080/03605300801970952}
+}
+
+@InCollection{	  le-gall.miermont:12:scaling,
+  author	= {Le Gall, Jean-Fran\c{c}ois and Miermont, Gr\'{e}gory},
+  title		= {Scaling limits of random trees and planar maps},
+  booktitle	= {Probability and statistical physics in two and more
+		  dimensions},
+  series	= {Clay Math. Proc.},
+  volume	= {15},
+  pages		= {155--211},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {2012},
+  mrclass	= {60J80 (60J68)},
+  mrnumber	= {3025391},
+  mrreviewer	= {Jos\'{e} Villa-Morales}
 }
 
 @Article{	  le-gall.mytnik:05:stochastic,
@@ -42776,21 +42872,7 @@
   url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
-@Book{		  nane:06:iterated*1,
-  author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
-		  isoperimetric-type inequalities},
-  note		= {Thesis (Ph.D.)--Purdue University},
-  publisher	= {ProQuest LLC, Ann Arbor, MI},
-  year		= {2006},
-  pages		= {47},
-  isbn		= {978-0542-86606-7},
-  mrclass	= {Thesis},
-  mrnumber	= {2709290},
-  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
-}
-
-@Article{	  nane:06:iterated*2,
+@Article{	  nane:06:iterated*1,
   author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
@@ -42807,6 +42889,20 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
+}
+
+@Book{		  nane:06:iterated*2,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
+		  isoperimetric-type inequalities},
+  note		= {Thesis (Ph.D.)--Purdue University},
+  publisher	= {ProQuest LLC, Ann Arbor, MI},
+  year		= {2006},
+  pages		= {47},
+  isbn		= {978-0542-86606-7},
+  mrclass	= {Thesis},
+  mrnumber	= {2709290},
+  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
 }
 
 @Article{	  nane:06:laws,
@@ -47974,7 +48070,22 @@
   mrreviewer	= {Anton Wakolbinger}
 }
 
-@Article{	  perkins:82:local,
+@InCollection{	  perkins:82:local,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
+}
+
+@Article{	  perkins:82:local*1,
   author	= {Perkins, Edwin},
   title		= {Local time is a semimartingale},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -47990,21 +48101,6 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
-}
-
-@InCollection{	  perkins:82:local*1,
-  author	= {Perkins, Edwin},
-  title		= {Local time and pathwise uniqueness for stochastic
-		  differential equations},
-  booktitle	= {Seminar on {P}robability, {XVI}},
-  series	= {Lecture Notes in Math.},
-  volume	= {920},
-  pages		= {201--208},
-  publisher	= {Springer, Berlin-New York},
-  year		= {1982},
-  mrclass	= {60H10},
-  mrnumber	= {658680},
-  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -52107,24 +52203,6 @@
 
 @Article{	  seppalainen:93:large,
   author	= {Sepp\"{a}l\"{a}inen, Timo},
-  title		= {Large deviations for lattice systems. {I}. {P}arametrized
-		  independent fields},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {96},
-  year		= {1993},
-  number	= {2},
-  pages		= {241--260},
-  issn		= {0178-8051},
-  mrclass	= {60F10 (60G60)},
-  mrnumber	= {1227034},
-  mrreviewer	= {Francis Comets},
-  doi		= {10.1007/BF01192135},
-  url		= {https://doi.org/10.1007/BF01192135}
-}
-
-@Article{	  seppalainen:93:large*1,
-  author	= {Sepp\"{a}l\"{a}inen, Timo},
   title		= {Large deviations for lattice systems. {II}.
 		  {N}onstationary independent fields},
   journal	= {Probab. Theory Related Fields},
@@ -52139,6 +52217,24 @@
   mrreviewer	= {Francis Comets},
   doi		= {10.1007/BF01199314},
   url		= {https://doi.org/10.1007/BF01199314}
+}
+
+@Article{	  seppalainen:93:large*1,
+  author	= {Sepp\"{a}l\"{a}inen, Timo},
+  title		= {Large deviations for lattice systems. {I}. {P}arametrized
+		  independent fields},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {96},
+  year		= {1993},
+  number	= {2},
+  pages		= {241--260},
+  issn		= {0178-8051},
+  mrclass	= {60F10 (60G60)},
+  mrnumber	= {1227034},
+  mrreviewer	= {Francis Comets},
+  doi		= {10.1007/BF01192135},
+  url		= {https://doi.org/10.1007/BF01192135}
 }
 
 @Article{	  seppalainen:94:large,
@@ -54934,6 +55030,23 @@
 
 @Article{	  tracy.widom:16:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the ground state energy of the {$\delta$}-function
+		  {B}ose gas},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
+  volume	= {49},
+  year		= {2016},
+  number	= {29},
+  pages		= {294001, 17},
+  issn		= {1751-8113},
+  mrclass	= {82D05},
+  mrnumber	= {3512121},
+  doi		= {10.1088/1751-8113/49/29/294001},
+  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
+}
+
+@Article{	  tracy.widom:16:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the ground state energy of the delta-function {F}ermi
 		  gas},
   journal	= {J. Math. Phys.},
@@ -54948,23 +55061,6 @@
   mrreviewer	= {Reinhard Redlinger},
   doi		= {10.1063/1.4964252},
   url		= {https://doi.org/10.1063/1.4964252}
-}
-
-@Article{	  tracy.widom:16:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the ground state energy of the {$\delta$}-function
-		  {B}ose gas},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
-  volume	= {49},
-  year		= {2016},
-  number	= {29},
-  pages		= {294001, 17},
-  issn		= {1751-8113},
-  mrclass	= {82D05},
-  mrnumber	= {3512121},
-  doi		= {10.1088/1751-8113/49/29/294001},
-  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
 }
 
 @Article{	  tracy.widom:17:blocks,
