More references for Brascamp Lieb Inequalities

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 95ce349fe6a4d5a6793d2984e45ea71ecb37ca03
+% Commit: fe2978497ffdf17fea58ea199a46eb566145d9e8
 % Date: 2023-04-12
 % ---------------------------
 
@@ -4350,6 +4350,56 @@
   url		= {https://doi.org/10.4310/CIS.2021.v21.n2.a2}
 }
 
+@InCollection{	  barthe.cordero-erausquin:04:inverse,
+  author	= {Barthe, F. and Cordero-Erausquin, D.},
+  title		= {Inverse {B}rascamp-{L}ieb inequalities along the heat
+		  equation},
+  booktitle	= {Geometric aspects of functional analysis},
+  series	= {Lecture Notes in Math.},
+  volume	= {1850},
+  pages		= {65--71},
+  publisher	= {Springer, Berlin},
+  year		= {2004},
+  mrclass	= {52A40 (35K05 60J35 60J60)},
+  mrnumber	= {2087151},
+  mrreviewer	= {Laurent Miclo},
+  doi		= {10.1007/978-3-540-44489-3\_7},
+  url		= {https://doi.org/10.1007/978-3-540-44489-3_7}
+}
+
+@Article{	  barthe.huet:09:on,
+  author	= {Barthe, Franck and Huet, Nolwen},
+  title		= {On {G}aussian {B}runn-{M}inkowski inequalities},
+  journal	= {Studia Math.},
+  fjournal	= {Studia Mathematica},
+  volume	= {191},
+  year		= {2009},
+  number	= {3},
+  pages		= {283--304},
+  issn		= {0039-3223},
+  mrclass	= {60E15 (35K05 52A40 60G15)},
+  mrnumber	= {2481898},
+  doi		= {10.4064/sm191-3-9},
+  url		= {https://doi.org/10.4064/sm191-3-9}
+}
+
+@Article{	  barthe:98:on,
+  author	= {Barthe, Franck},
+  title		= {On a reverse form of the {B}rascamp-{L}ieb inequality},
+  journal	= {Invent. Math.},
+  fjournal	= {Inventiones Mathematicae},
+  volume	= {134},
+  year		= {1998},
+  number	= {2},
+  pages		= {335--361},
+  issn		= {0020-9910},
+  mrclass	= {26D15 (35P15 35Q99)},
+  mrnumber	= {1650312},
+  mrreviewer	= {L. Leindler},
+  doi		= {10.1007/s002220050267},
+  url		= {https://doi.org/10.1007/s002220050267}
+}
+
 @Article{	  barton.etheridge.ea:10:new,
   author	= {Barton, N. H. and Etheridge, A. M. and V\'{e}ber, A.},
   title		= {A new model for evolution in a spatial continuum},
@@ -5135,6 +5185,23 @@
   url		= {https://doi.org/10.1017/s002190020001442x}
 }
 
+@Article{	  beckner:75:inequalities,
+  author	= {Beckner, William},
+  title		= {Inequalities in {F}ourier analysis},
+  journal	= {Ann. of Math. (2)},
+  fjournal	= {Annals of Mathematics. Second Series},
+  volume	= {102},
+  year		= {1975},
+  number	= {1},
+  pages		= {159--182},
+  issn		= {0003-486X},
+  mrclass	= {42A92 (42A18)},
+  mrnumber	= {385456},
+  mrreviewer	= {I. I. Hirschman, Jr.},
+  doi		= {10.2307/1970980},
+  url		= {https://doi.org/10.2307/1970980}
+}
+
 @InCollection{	  beenakker:11:classical,
   author	= {Beenakker, C. W. J.},
   title		= {Classical and quantum optics},
@@ -5352,6 +5419,24 @@
   mrreviewer	= {Lars Olsen},
   doi		= {10.1007/s00220-009-0752-1},
   url		= {https://doi.org/10.1007/s00220-009-0752-1}
+}
+
+@Article{	  bennett.bez.ea:09:heat-flow,
+  author	= {Bennett, Jonathan and Bez, Neal and Carbery, Anthony},
+  title		= {Heat-flow monotonicity related to the {H}ausdorff-{Y}oung
+		  inequality},
+  journal	= {Bull. Lond. Math. Soc.},
+  fjournal	= {Bulletin of the London Mathematical Society},
+  volume	= {41},
+  year		= {2009},
+  number	= {6},
+  pages		= {971--979},
+  issn		= {0024-6093},
+  mrclass	= {42A38},
+  mrnumber	= {2575327},
+  mrreviewer	= {Alberto Portal},
+  doi		= {10.1112/blms/bdp073},
+  url		= {https://doi.org/10.1112/blms/bdp073}
 }
 
 @Article{	  bennett.carbery.ea:08:brascamp-lieb,
@@ -7073,6 +7158,25 @@
   mrnumber	= {2737711},
   doi		= {10.1214/ECP.v15-1584},
   url		= {https://doi.org/10.1214/ECP.v15-1584}
+}
+
+@Article{	  borell:00:diffusion,
+  author	= {Borell, Christer},
+  title		= {Diffusion equations and geometric inequalities},
+  journal	= {Potential Anal.},
+  fjournal	= {Potential Analysis. An International Journal Devoted to
+		  the Interactions between Potential Theory, Probability
+		  Theory, Geometry and Functional Analysis},
+  volume	= {12},
+  year		= {2000},
+  number	= {1},
+  pages		= {49--71},
+  issn		= {0926-2601},
+  mrclass	= {60H30 (60J60)},
+  mrnumber	= {1745333},
+  mrreviewer	= {Zhongmin Qian},
+  doi		= {10.1023/A:1008641618547},
+  url		= {https://doi.org/10.1023/A:1008641618547}
 }
 
 @Article{	  borell:75:brunn-minkowski,
@@ -9994,6 +10098,24 @@
   url		= {https://doi.org/10.1002/(SICI)1097-0312(200003)53:3<370::AID-CPA4>3.0.CO;2-0}
 }
 
+@Article{	  carlen.cordero-erausquin:09:subadditivity,
+  author	= {Carlen, Eric A. and Cordero-Erausquin, Dario},
+  title		= {Subadditivity of the entropy and its relation to
+		  {B}rascamp-{L}ieb type inequalities},
+  journal	= {Geom. Funct. Anal.},
+  fjournal	= {Geometric and Functional Analysis},
+  volume	= {19},
+  year		= {2009},
+  number	= {2},
+  pages		= {373--405},
+  issn		= {1016-443X},
+  mrclass	= {26D15 (28D20 35J10 39B62 60E15 94A17)},
+  mrnumber	= {2545242},
+  mrreviewer	= {Viktor A. Obuljen},
+  doi		= {10.1007/s00039-009-0001-y},
+  url		= {https://doi.org/10.1007/s00039-009-0001-y}
+}
+
 @Article{	  carlen.kree:91:lp,
   author	= {Carlen, Eric and Kr\'{e}e, Paul},
   title		= {{$L^p$} estimates on iterated stochastic integrals},
@@ -10008,6 +10130,24 @@
   mrnumber	= {1085341},
   mrreviewer	= {Yu. S. Mishura},
   url		= {http://links.jstor.org/sici?sici=0091-1798(199101)19:1<354:EOISI>2.0.CO;2-C&origin=MSN}
+}
+
+@Article{	  carlen.lieb.ea:04:sharp,
+  author	= {Carlen, E. A. and Lieb, E. H. and Loss, M.},
+  title		= {A sharp analog of {Y}oung's inequality on {$S^N$} and
+		  related entropy inequalities},
+  journal	= {J. Geom. Anal.},
+  fjournal	= {The Journal of Geometric Analysis},
+  volume	= {14},
+  year		= {2004},
+  number	= {3},
+  pages		= {487--520},
+  issn		= {1050-6926},
+  mrclass	= {82C05 (52A40 60B15 82C40)},
+  mrnumber	= {2077162},
+  mrreviewer	= {Dario Cordero-Erausquin},
+  doi		= {10.1007/BF02922101},
+  url		= {https://doi.org/10.1007/BF02922101}
 }
 
 @InCollection{	  carlson:10:elliptic,
@@ -37059,6 +37199,42 @@
   url		= {https://doi.org/10.1007/s00041-022-09914-w}
 }
 
+@Article{	  lehec:13:representation,
+  author	= {Lehec, Joseph},
+  title		= {Representation formula for the entropy and functional
+		  inequalities},
+  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {49},
+  year		= {2013},
+  number	= {3},
+  pages		= {885--899},
+  issn		= {0246-0203},
+  mrclass	= {60J65 (39B62 60J70)},
+  mrnumber	= {3112438},
+  doi		= {10.1214/11-aihp464},
+  url		= {https://doi.org/10.1214/11-aihp464}
+}
+
+@Article{	  lehec:14:short,
+  author	= {Lehec, Joseph},
+  title		= {Short probabilistic proof of the {B}rascamp-{L}ieb and
+		  {B}arthe theorems},
+  journal	= {Canad. Math. Bull.},
+  fjournal	= {Canadian Mathematical Bulletin. Bulletin Canadien de
+		  Math\'{e}matiques},
+  volume	= {57},
+  year		= {2014},
+  number	= {3},
+  pages		= {585--597},
+  issn		= {0008-4395},
+  mrclass	= {39B62 (60J65)},
+  mrnumber	= {3239122},
+  doi		= {10.4153/CMB-2013-040-x},
+  url		= {https://doi.org/10.4153/CMB-2013-040-x}
+}
+
 @Article{	  lei.nualart:09:decomposition,
   author	= {Lei, Pedro and Nualart, David},
   title		= {A decomposition of the bifractional {B}rownian motion and
@@ -37662,6 +37838,23 @@
   mrreviewer	= {Nicolae Angelescu},
   doi		= {10.1007/s002200050040},
   url		= {https://doi.org/10.1007/s002200050040}
+}
+
+@Article{	  lieb:90:gaussian,
+  author	= {Lieb, Elliott H.},
+  title		= {Gaussian kernels have only {G}aussian maximizers},
+  journal	= {Invent. Math.},
+  fjournal	= {Inventiones Mathematicae},
+  volume	= {102},
+  year		= {1990},
+  number	= {1},
+  pages		= {179--208},
+  issn		= {0020-9910},
+  mrclass	= {42B10},
+  mrnumber	= {1069246},
+  mrreviewer	= {Joseph Max Rosenblatt},
+  doi		= {10.1007/BF01233426},
+  url		= {https://doi.org/10.1007/BF01233426}
 }
 
 @Book{		  lifshitz.pitaevskiui:80:course,
