--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 45717a986ae76b3f991c7ee6f9c22b842b3b5e77
-% Date: 2023-04-16
+% Commit: 491b712bab31900ffe3293f0f37c9f4e93ef44fb
+% Date: 2023-04-21
 % ---------------------------
 
 
@@ -41610,6 +41610,23 @@
   mrreviewer	= {Huili Liu},
   doi		= {10.1214/16-AOP1141},
   url		= {https://doi.org/10.1214/16-AOP1141}
+}
+
+@Article{	  mueller.mytnik.ea:21:speed,
+  author	= {Mueller, Carl and Mytnik, Leonid and Ryzhik, Lenya},
+  title		= {The speed of a random front for stochastic
+		  reaction-diffusion equations with strong noise},
+  journal	= {Comm. Math. Phys.},
+  fjournal	= {Communications in Mathematical Physics},
+  volume	= {384},
+  year		= {2021},
+  number	= {2},
+  pages		= {699--732},
+  issn		= {0010-3616},
+  mrclass	= {35K57 (60H15 92D10)},
+  mrnumber	= {4259374},
+  doi		= {10.1007/s00220-021-04084-0},
+  url		= {https://doi.org/10.1007/s00220-021-04084-0}
 }
 
 @Article{	  mueller.neuman.ea:20:improved,
